--- a/software.html
+++ b/software.html
@@ -39,6 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<p><span class="badge badge-light">Lviv, Ukraine</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://columbususa.zohorecruit.com/recruit/ViewJob.na?digest=lK1VdUafFt6UWhqebSEml3bzBM.YePt0TtgtpcD5IcY-&embedsource=Twitter'>Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<p><span class="badge badge-light">Columbia, Maryland</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nGO6mMwd'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -91,7 +103,7 @@
 <p><span class="badge badge-light">Foster City United States Raleigh, North Carolina United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
+<h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
 <p><span class="badge badge-light">San Francisco  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -241,7 +253,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tealium/97fb69fe-f024-4480-bfe5-4ddf2e9e24ad'>Tealium - Senior Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tealium/97fb69fe-f024-4480-bfe5-4ddf2e9e24ad'>Tealium - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -261,7 +273,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698343930-senior-net-application-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET APPLICATION SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698343930-senior-net-application-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET APPLICATION SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -296,6 +308,11 @@
 <h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='http://lotame.applytojob.com/app/share/E9xNaQESlB'>Software Engineering Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 14, 2019 ... Software Engineering Manager. Columbia, MD; Full Time; Manager/Supervisor. 
+Enter your name and email to generate a unique referral link and receive credit?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4497550002'>Job Application for Junior Software Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -381,11 +398,11 @@
 <p><span class="badge badge-light">Boston, Massachusetts  Austin, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oECpbfwA&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n42KmMwt&jvi=oECpbfwA,Job&jvk=Job'>Medidata Solutions Careers - Software Engineer (C# / .Net)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oECpbfwA&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n42KmMwt&jvi=oECpbfwA,Job&jvk=Job'>Medidata Solutions Careers - Software Engineer (C# / .Net)</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1934626'>Job Application for Senior Software Engineer - Phone Numbers at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1934626'>Job Application for Senior Software Engineer - Phone Numbers at Twilio</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -401,7 +418,7 @@
 <p><span class="badge badge-light">Redwood City, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bazaarvoice/3b4166cf-6a7b-45a8-9fe8-da0e61c03252'>Bazaarvoice - Senior Back-End Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/bazaarvoice/3b4166cf-6a7b-45a8-9fe8-da0e61c03252'>Bazaarvoice - Senior Back-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -427,22 +444,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/ooDVafwQ'>Zeta Global Careers - Software Engineer - AI & ML</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698331369-director-software-engineering'>PayScale Director, Software Engineering | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Seattle, WA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330790-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
